# nl2sql_v3

./: .env.example  .gitignore  AGENTS.md  MILVUS_IMPLEMENTATION_STATUS.md  NL2SQL对话工具使用说明.md  README.md  check_startup.py  main.py  patch_configs.py  patch_frontend.py  pyproject.toml  pytest.ini  remove_dead_configs.py  revert_frontend.py  temp_discover_log.txt  test_composite_candidates.py  test_df.py  test_full_composite_generation.py  test_full_relationship_pipeline.py  test_modifications.py  test_structure_flags.py  update_css.py  verify_milvus_data.py  关联关系缺失真正原因分析.md  复合键关系无法发现的完整分析.md  外键关系无法发现的根本原因.md  验证数据质量SQL.sql
.claude/: settings.local.json
configs/: test_pk_config.yaml
docs/: 0.1.todo.md  0.3.启动命令行.txt  0.需求说明.txt  14.历史SQL检索功能改造方案.md  16.重要修改建议.txt  17.表分类与桥接表处理改造方案.md  20.State瘦身优化方案.md  30.0.nl2sql_father_graph_architecture.html  30.1.State 技术参考.md  30.2.SQL 生成子图 State 定义.md  30.3.Router 节点概要设计.md  31.0.NL2SQL_FastPath_父图第一阶段概要设计.md  32.0.NL2SQL_Father_FastPath_Stage1_Design.md  33.0.NL2SQL父图第一阶段FastPath概要设计.md  34.0.NL2SQL父图第二阶段ComplexPath概要设计.md  35.0.复杂查询依赖结果传递优化.md  56.1_父图graph_control遗留配置清理与术语统一方案.md  70_PostgresSaver_PostgresStore_概要设计.md  71_禁用子图checkpoint的原因与修改规划.md  75.增加对话历史记录的需求.md  75_对话历史功能优化与bug修复.md  75_对话历史记录功能概要设计.md  76_父图Checkpoint瘦身优化设计.md  77_CLI界面Rich优化设计.md  78_CLI启动时展示历史会话列表设计.md  78_LangGraph持久化数据库连接配置重构设计.md  80_FastAPI与Streamlit架构设计.md  81_服务启动与日志配置指南.md  82_milvus适应源系统多db_name改造.md  83_父图引入DeepAgents动态规划重构方案.md  84_父图ComplexPath局部引入DeepAgents动态规划方案.md  85_当前父图依赖注入与并发执行逻辑缺陷分析.md  86_父图问题分解模块评估与DeepAgents引入决策.md  (+24 more)
(+419 files in other folders)
